--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,30 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
+      - REDIS_URL=redis://redis:6379
+      # - DEBUG=*
     volumes:
       - .:/app
       - /app/node_modules
-    restart: unless-stopped 
+    depends_on:
+      redis:
+        condition: service_healthy
+    command: npm run dev
+    restart: unless-stopped
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+
+volumes:
+  redis_data: 
