--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,11 +1,14 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - REDIS_URL=redis://redis:6379
+      # - DEBUG=true
     depends_on:
       redis:
         condition: service_healthy
