--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         condition: service_healthy
       kafka:
         condition: service_healthy
+      kafka-topics:
+        condition: service_completed_successfully
     restart: unless-stopped
 
   redis:
@@ -56,6 +58,21 @@ services:
       timeout: 5s
       retries: 3
 
+  kafka-topics:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      kafka:
+        condition: service_healthy
+    volumes:
+      - ./scripts:/scripts
+    environment:
+      KAFKA_BROKER: kafka:29092
+      TOPIC_NAME: computable-searches
+      PARTITIONS: 2
+      REPLICATION_FACTOR: 1
+    command: /scripts/setup-kafka-topics.sh
+    restart: "no"
+
   search-stats-producer:
     build:
       context: ./workers/search-stats-producer
@@ -69,6 +86,25 @@ services:
         condition: service_healthy
       kafka:
         condition: service_healthy
+      kafka-topics:
+        condition: service_completed_successfully
+    restart: unless-stopped
+
+  search-stats-consumer-top-queries:
+    build:
+      context: ./workers/search-stats-consumer-top-queries
+      dockerfile: Dockerfile
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - KAFKA_BROKER=kafka:29092
+    depends_on:
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      kafka-topics:
+        condition: service_completed_successfully
     restart: unless-stopped
 
 volumes:
