--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -110,5 +110,22 @@ services:
         condition: service_completed_successfully
     restart: unless-stopped
 
+  search-stats-consumer-popular-hour:
+    build:
+      context: ./workers/search-stats-consumer-popular-hour
+      dockerfile: Dockerfile
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - KAFKA_BROKER=kafka:29092
+    depends_on:
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      kafka-topics:
+        condition: service_completed_successfully
+    restart: unless-stopped
+
 volumes:
   redis_data: 
