--- a/workers/search-stats-producer/Dockerfile
+++ b/workers/search-stats-producer/Dockerfile
@@ -2,12 +2,17 @@ FROM node:23-alpine
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
+# Copy source code
 COPY . .
 
+# Build the application
 RUN npm run build
 
+# Start the application
 CMD ["npm", "start"] 
